a little more styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebTech 2023</title>
     <script src="app"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
         <form>
-            <h1 class="pageheader">🎶SDU Jammer🎶</h1>
+            <h1 class="pageheader">Submit tracks</h1>
             <label for="Name">Enter the Album name:</label>
             <input type="text" id="Name" name="Name" maxlength="255" minlength="1" placeholder="Sound of Silence">
           
