--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <form>
-            <h1 class="pageheader">Submit tracks</h1>
+            <h2 class="pageheader">Submit a track</h1>
             <label for="Name">Enter the Album name:</label>
             <input type="text" id="Name" name="Name" maxlength="255" minlength="1" placeholder="Sound of Silence">
           
@@ -40,7 +40,10 @@
             <label for="trackno">Enter the amount of tracks (10 or below)</label>
             <input type="number" id="trackno" name="trackno" min="1" max="10">
 
-            <input type="submit" class="formsubmit">
+            <div class="formsubmit">
+              <input type="submit" >
+            </div>
+
           </form>
     </main>
 </body>
